add sort option

--- a/src/locales/ch/translationCH.json
+++ b/src/locales/ch/translationCH.json
@@ -106,5 +106,6 @@
     "Feature_name": "函数名称",
     "Reply": "编辑公司",
     "Close_ticket": "关闭票证",
-    "editCompany": "编辑公司"
+    "editCompany": "编辑公司",
+    "View_Currency": "查看货币"
 }
