--- a/src/locales/es/translationES.json
+++ b/src/locales/es/translationES.json
@@ -99,5 +99,6 @@
     "expiryDate": "Fecha de caducidad",
     "submit": "entregar",
     "Current_Plan": "Plan actual",
-    "Per_month": "Por mes"
+    "Per_month": "Por mes",
+    "View_Currency": "Ver moneda"
 }
