--- a/src/locales/ge/translationGE.json
+++ b/src/locales/ge/translationGE.json
@@ -106,5 +106,6 @@
     "Feature_name": "Funktionsname",
     "Reply": "Firma bearbeiten",
     "Close_ticket": "Ticket schließen",
-    "editCompany": "Firma bearbeiten"
+    "editCompany": "Firma bearbeiten",
+    "View_Currency": "Siehe Währung"
 }
