--- a/src/locales/it/translationIT.json
+++ b/src/locales/it/translationIT.json
@@ -106,5 +106,6 @@
     "Feature_name": "FunktioNome della funzionensname",
     "Reply": "Modifica azienda",
     "Close_ticket": "Chiudi biglietto",
-    "editCompany": "Modifica azienda"
+    "editCompany": "Modifica azienda",
+    "View_Currency": "Vedi valuta"
 }
